# FastAPI

./: .gitignore  alembic.ini  crud.py  db.sqlite3  id_views.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 219e3a2744d6_.py  4083cf5a2367_create_user_table.py  49dd3f73c333_create_order_and_update_table.py  4f1fa216ee10_create_profile_table.py  4fa9675ffcfe_create_post_table.py  8a0aa5a8c8af_.py  e27c2a0934e3_create_post_table.py  f155d267e249_create_products_table.py
api_v1/demo_auth/: views.py
api_v1/products/: crud.py  dependencies.py  shemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  shemas.py  views.py
