[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = "This is one of of firsts proj"
authors = ["Dmitriy Pilevich <pilevichdima60@gmail.com>"]
license = "MTT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
pytest = "^8.3.3"
uvicorn = {extras = ["standart"], version = "^0.30.6"}
pydantic = {extras = ["email"], version = "^2.9.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.34"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.5.2"
alembic = "^1.13.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
